@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2004/03/26 02:27:34 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2004/06/24 18:20:04 xtraeme Exp $
 #
 
-DISTNAME=		icecast-2.0.0
-PKGREVISION=		2
+DISTNAME=		icecast-2.0.1
 CATEGORIES=		audio
 MASTER_SITES=		http://www.icecast.org/files/
 
