@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6300 2004/06/24 16:57:45 darcy Exp $
+$NetBSD: CHANGES,v 1.6301 2004/06/24 18:20:03 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3046,3 +3046,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mit-krb5 to 1.3.4 [jlam 2004-06-24]
 	Added freedroid-1.02 [dillo 2004-06-24]
 	Updated postgresql to 7.3.6 [darcy 2004-06-24]
+	Updated icecast to 2.0.1 [xtraeme 2004-06-24]
